--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Shopidarity{% endblock %}</title>
+  <link rel="shortcut icon" href="/static/shopidarity_favicon.ico" type="image/x-icon" />
+
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <!-- Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
