--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -14,8 +14,8 @@
       </br>
       {% if current_user.is_authenticated and current_user.admin %}
         <h2>Admin</h2>
-        <a href="{{ url_for('dashboard_suggestions') }}" class="block text-blue-600 hover:underline">Approve Products</a>
-        <a href="{{ url_for('dashboard_new_user') }}" class="block text-blue-600 hover:underline">Create Users</a>
+        <a href="{{ url_for('dashboard_suggestions') }}" class="block text-blue-600 hover:underline">Review Products</a>
+        <a href="{{ url_for('dashboard_new_user') }}" class="block text-blue-600 hover:underline">Manage Users</a>
       {% endif %}
 
     </nav>
