--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -8,7 +8,7 @@
     {% if product.image_url %}
       <img src="{{ product.image_url }}" id="image-url" class="w-48 mb-2" alt="Product Image" />
     {% else %}
-      <p class="italic text-gray-400">No image available</p>
+      <img src="/static/default-product.png" id="image-url" class="w-48 mb-2" alt="Default Product Image" />
     {% endif %}
   </div>
 
