--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>{% block title %}Shopidarity{% endblock %}</title>
   <link rel="shortcut icon" href="/static/shopidarity_favicon.ico" type="image/x-icon" />
 
