--- a/templates/home.html
+++ b/templates/home.html
@@ -49,7 +49,7 @@
   <div class="container mx-auto px-4 sm:px-6 lg:px-8 flex flex-col-reverse lg:flex-row items-center lg:items-start lg:space-x-12 space-y-10 lg:space-y-0">
     
     <!-- Image on the Left -->
-    <div class="lg:w-1/2 w-full">
+    <div class="lg:w-1/2 w-full pt-4">
       <img src="{{ url_for('static', filename='images/scan-connect.jpg') }}" alt="Scanning a barcode in a store" class="rounded-xl shadow-xl w-full">
     </div>
 
