--- a/templates/scan.html
+++ b/templates/scan.html
@@ -34,7 +34,9 @@
           <div id="product-detail-link" class="mb-4 hidden"></div>
           <p id="add-product-prompt" class="text-sm text-gray-600 mb-2 hidden"></p>
           <p id="add-product-verify" class="text-sm text-gray-500 mb-4 hidden">
-            Before adding this product to Shopidarity, check external sources to verify the product details. You may only add 5 products per day initially.
+            Before adding this product to Shopidarity, check external sources to verify the product details.<br>
+            You will be able to use our UPC lookup tool on the next page.<br>
+            All users will be limited too 5 product lookups per day to reduce external service charges.
           </p>
           <h2 class="text-md font-semibold">Search:</h2>
           <div class="flex flex-wrap text-center gap-2 mt-2">
