--- a/templates/products/base.html
+++ b/templates/products/base.html
@@ -98,7 +98,7 @@
 
 
 <!-- Main Content -->
-<main class="flex-1 overflow-y-auto p-6 space-y-10">
+<main class="flex-1 overflow-y-auto lg:overflow-y-visible p-6 space-y-10">
   {% block detail %}{% endblock %}
 </main>
 
